Parametrage de cs fixer et ajout des commandes test:cs et fix:cs

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
 
     ],
     "scripts": {
-        "run-server" : "php -d display_errors -S localhost:8000 -t public/"
+        "run-server" : "php -d display_errors -S localhost:8000 -t public/",
+        "test:cs": "php vendor/bin/php-cs-fixer fix --dry-run --diff",
+        "fix:cs": "php vendor/bin/php-cs-fixer fix"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8"
