--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "scripts": {
         "run-server" : "php -d display_errors -S localhost:8000 -t public/",
-        "test:cs": "php vendor/bin/php-cs-fixer fix --dry-run --diff",
+        "test:cs": "php vendor/bin/php-cs-fixer fix --dry-run",
         "fix:cs": "php vendor/bin/php-cs-fixer fix"
     },
     "require-dev": {
