--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8"
-    }
+    },
+  "require": {
+    "ext-pdo": "*"
+  }
 }
